roco-gen/tests/templates/snapshots/inject[migration_lib]@empty_migration.snap
---
source: roco-gen/tests/templates/migration.rs
expression: "fs::read_to_string(migration_path.join(\"lib.rs\")).expect(\"Failed to read lib.rs\")"
---
#![allow(elided_lifetimes_in_paths)]
#![allow(clippy::wildcard_imports)]
pub use sea_orm_migration::prelude::*;
mod m[TIME]_users;

mod m[TIME]_fix_users_table;
pub struct Migrator;

#[async_trait::async_trait]
impl MigratorTrait for Migrator {
    fn migrations() -> Vec<Box<dyn MigrationTrait>> {
        vec![
            Box::new(m[TIME]_users::Migration),
            Box::new(m[TIME]_fix_users_table::Migration),
            // inject-above (do not remove this comment)
        ]
    }
}
