roco-gen/tests/templates/snapshots/inject[task_mod_rs]@task.snap
---
source: roco-gen/tests/templates/task.rs
expression: "fs::read_to_string(task_path.join(\"mod.rs\")).expect(\"Failed to read updated task mod file: mod.rs\")"
---
pub mod cleanup;
