roco-gen/tests/templates/snapshots/inject[test_mod]@Html_scaffold.snap
---
source: roco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(tests_path.join(\"mod.rs\")).expect(\"Failed to read mod.rs\")"
---
mod movies;
