roco-gen/tests/templates/snapshots/inject[test_mod]@model.snap
---
source: roco-gen/tests/templates/model.rs
expression: "fs::read_to_string(tests_path.join(\"mod.rs\")).expect(\"Failed to read mod.rs\")"
---
mod movies;
